# openfront-notifier

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: cli.py  monitor.py
